fix: column gap to gap

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -21,5 +21,5 @@
 @mixin grid($column, $gap) {
   display: grid;
   grid-template-columns: repeat($column, 1fr);
-  column-gap: $gap;
+  gap: $gap;
 }
